
syntax = "proto3";
package PeerTalk.PubSub;

message PubSubMessage
{
    repeated Subscription Subscriptions = 1;
    repeated PublishedMessage PublishedMessages = 2;
}

message Subscription
{
    bool Subscribe = 1;
    string Topic = 2;    
}

message PublishedMessage
{
    bytes From = 1;
    bytes DataBytesProto = 2;
    bytes SequenceNumberProto = 3;
    repeated string TopicsProto = 4;
}
